...
    android:name="com.simpl.krammer.flashcards.CreateFlashcardSetFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flashcards.CreateFlashcardSetFragment"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/flashcard_create_fragment_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
...
