<?xml version="1.0" encoding="utf-8"?>
<com.wajahatkarim3.easyflipview.EasyFlipView
    android:id="@+id/studyEasyFlip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/colorPrimaryDark"
    app:flipOnTouch="false"
    app:flipEnabled="true"
    app:flipDuration="400"
    app:flipFrom="right"
    app:flipType="horizontal"
    app:autoFlipBack="false">

    <!-- Back Layout Goes Here -->
    <include layout="@layout/fragment_flashcard_back"/>

    <!-- Front Layout Goes Here -->
    <include layout="@layout/fragment_flashcard_front"/>

</com.wajahatkarim3.easyflipview.EasyFlipView>