<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:name="com.simpl.krammer.flashcards.StudyFlashcardFragmentSet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flashcards.StudyFlashcardFragmentSet"
    android:background="@color/colorPrimaryDark">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/studySetRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="500dp"
        android:minHeight="300dp"
        android:orientation="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/fragment_study_flashcard_set" />


</androidx.constraintlayout.widget.ConstraintLayout>