<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dimGray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flashcardBackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Definition"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>